<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FlashCard</string>
    <string name="flashcardQuestion">What is the first black people free in the world ?</string>
    <string name="flashcardAnswerHint">Empty</string>
    <string name="addNewFlashCard">New</string>
    <string name="newFlashCard">New card Question ?</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="save">save</string>
    <string name="answer1">Haitian</string>
    <string name="answer2">Venezuela</string>
    <string name="answer3">Bolivia</string>
    <string name="answerEmpty">Answer Empty</string>
    <string name="goodAnswerEmpty">Good answer Empty</string>
    <string name="wrongAnswerEmpty">Wrong answer Empty</string>
    <string name="question_is_empty">Question is empty !</string>
    <string name="saveSuccessCard">Card successfull created!</string>
    <string name="modifySuccessCard">Card successfull mdified!</string>
    <string name="answer_is_empty">Answer is empty</string>
    <string name="button_next_card">Button next card</string>
    <string name="button_previous_card">Button previous card</string>
    <string name="button_delete_card">Button delete card</string>
    <string name="emptyCard">Empty Card !</string>
    <string name="delete">"Delete "</string>
    <string name="card">" Card ?"</string>
</resources>